[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"



[project]
name = "wthisj"
version = "0.2.0"
authors = [
  { name="wcfrobert", email="temprobertdev@gmail.com" },
]
description = "wthisj - punching shear calculations in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wcfrobert/wthisj"
"Bug Tracker" = "https://github.com/wcfrobert/wthisj/issues"