[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "wthisj"
version = "0.2.1"
authors = [
  { name="wcfrobert", email="temprobertdev@gmail.com" },
]
description = "wthisj - punching shear calculations in python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.0",
    "plotly>=5.0",
]
keywords = [
    "structural engineering",
    "concrete",
    "reinforced concrete",
    "punching shear",
    "two way shear",
    "slab design"
]


[project.urls]
"Homepage" = "https://github.com/wcfrobert/wthisj"
"Bug Tracker" = "https://github.com/wcfrobert/wthisj/issues"